# obs-studio

./: .gitignore  .gitmodules
UI/: api-interface.cpp  window-basic-main-outputs.cpp
UI/obs-frontend-api/: obs-frontend-api.cpp  obs-frontend-api.h  obs-frontend-internal.hpp
UI/win-update/: win-update.cpp
cmake/Modules/: CopyMSVCBins.cmake  FindLua.cmake
libobs/: obs-internal.h  obs-output.c  obs-source.c  obs.c  obs.h
libobs/util/: platform-windows.c
plugins/: CMakeLists.txt
plugins/obs-outputs/: flv-output.c
plugins/obs-outputs/librtmp/: rtmp.c
plugins/obs-scripting/: CMakeLists.txt  obs-scripting-config.h.in  obs-scripting-lua-source.c  obs-scripting-lua.c  obs-scripting-lua.h  obs-scripting-module.c  obs-scripting-python-source.c  obs-scripting-python.c  obs-scripting-python.h
plugins/obs-scripting/obslua/: CMakeLists.txt  obslua.i
plugins/obs-scripting/obspython/: CMakeLists.txt  obspython.i
